...
        }
      }) { paddingValues ->
        LazyColumn(
            modifier =
                Modifier.fillMaxWidth()
                    .padding(paddingValues)
                    .testTag("AssoList")
                    .background(color = MaterialTheme.colorScheme.surface),
            horizontalAlignment = Alignment.CenterHorizontally,
            userScrollEnabled = true,
            state = listState) {
              if (loading) {
                item { LoadingCircle() }
...
