...
import com.swent.assos.model.view.EventViewModel
import com.swent.assos.ui.components.JoinUsButton
import com.swent.assos.ui.components.PageTitleWithGoBack

@Composable
fun EmailSubmit(onClick: () -> Unit) {
  JoinUsButton(onClick = onClick, text = "Submit")
}

@OptIn(ExperimentalComposeUiApi::class)
@Composable
fun CreateTicket(navigationActions: NavigationActions, eventId: String) {
  val eventViewModel: EventViewModel = hiltViewModel()
...
    when {
      showingSuccess -> {
        AlertDialog(
            onDismissRequest = { showingSuccess = false },
            title = { Text("Success") },
            text = { Text("Ticket created for $email") },
            confirmButton = { Button(onClick = { showingSuccess = false }) { Text("Ok") } })
      }
      showingError -> {
        AlertDialog(
            onDismissRequest = { showingError = false },
            title = { Text("Error") },
            text = { Text("$email has no account") },
...
